--- a/Generics/Generics.csproj
+++ b/Generics/Generics.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Uc1PrintArray.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
