[Eswar] Added FloatMaximum program

--- a/Generics/Generics.csproj
+++ b/Generics/Generics.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FindMax.cs" />
+    <Compile Include="FloatMaximum.cs" />
     <Compile Include="Generic ClassForArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
