[Eswar] Added Generic find maximum

--- a/Generics/Generics.csproj
+++ b/Generics/Generics.csproj
@@ -46,8 +46,10 @@
     <Compile Include="FindMax.cs" />
     <Compile Include="FloatMaximum.cs" />
     <Compile Include="Generic ClassForArray.cs" />
+    <Compile Include="GenericFindMax.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringMaximum.cs" />
     <Compile Include="Uc1PrintArray.cs" />
     <Compile Include="Uc2GenericPrintArray.cs" />
   </ItemGroup>
